@@ -222,6 +222,7 @@ ImpressCMS ChangeLog
 * #519: Better identify installed/not installed modules in module administration. (Hisapapa/stranger)
 * #498: answer in the scrapbook = blank page. (stranger)
 * #98: Change Password. (stranger)
+* #549: Password meter should become a select box in preferences again. (stranger)
 
 == Impresscms 1.1.2==
 
